--- a/style.css
+++ b/style.css
@@ -23,22 +23,13 @@ img
 /* VARIABLES */
 :root
 {
- /* --hue: 159;
-  --base-color:rgba(245, 161, 35, 0.562);
-  --base-color-second: rgba(252, 185, 85, 0.562);
-  --base-color-alt: rgba(255, 145, 2, 0.89);
-  --title-color: hsl(var(--hue) 41% 10%);
-  --text-color: hsl(0 0% 46%);
-  --text-color-light: hsl(0 0% 98%);
-  --body-color: rgba(255, 222, 173, 0.815);*/
- --hue: 17;
-    --base-color: hsl(var(--hue) 36% 57%);
-    --base-color-second: hsl(var(--hue) 65% 78%);
-    --base-color-alt: hsl(var(--hue) 57% 33%);
-    --title-color: hsl(var(--hue) 41% 10%);
-    --text-color: hsl(0 36% 57%);
-    --text-color-light: hsl(0 0% 98%);
-    --body-color: hsl(var(--hue) 191% 91%);
+  --base-color:#733D29;
+  --base-color-second: #402A22;
+  --base-color-alt:#A62D12;
+  --title-color: #402A22;
+  --text-color: #733D29;
+  --text-color-light: #D9BD9C;
+  --body-color:#D99152;
     /*Fonts*/
   --header-height: 3rem;
   --font-size-body: 1rem ;
@@ -175,7 +166,7 @@ main
 }
 .logo span
 {
-  color:rgba(150, 101, 28, 0.822);
+  color:var(--base-color);
 }
 
 .logo#alt span
@@ -364,7 +355,7 @@ nav.show div.icon-close_tab
   content: '';
   height: 98%;
   width: 49%;
-  background: rgba(252, 170, 48, 0.432);
+  background: var(--text-color-light);
   position: absolute;
   top: -8%;
   right: 0%;
@@ -647,7 +638,7 @@ footer .social a:hover
     content: '';
     height: 42%;
     width: 50%;
-    background: rgba(252, 170, 48, 0.432);
+    background: var(--text-color-light);
     position: absolute;
     top: -4.5%;
     right: 0.2%;
