--- a/style.css
+++ b/style.css
@@ -23,13 +23,13 @@ img
 /* VARIABLES */
 :root
 {
-  --base-color:#733D29;
-  --base-color-second: #402A22;
-  --base-color-alt:#A62D12;
-  --title-color: #402A22;
+  --base-color: #733D29;
+  --base-color-second: red;
+  --base-color-alt: red;
+  --title-color: red;
   --text-color: #733D29;
   --text-color-light: #D9BD9C;
-  --body-color:#D99152;
+  --body-color: #D99152;
     /*Fonts*/
   --header-height: 3rem;
   --font-size-body: 1rem ;
